Loading function: Centered align bug fixed

--- a/src/pages/features/features.scss
+++ b/src/pages/features/features.scss
@@ -2,17 +2,27 @@ page-features {
   .hidden{
     display:none;
   }
-  .loader{
-   height: 100%;
-    width: 100%;
-    text-align: center;
-    display: inline-block;
-    vertical-align: top;
-    padding-top:50%
+  .loading{
+    position:absolute;
+    top:50%;
+    left:50%;
+    width:30px;
+    height:30px;
+    margin:-20px 0 0 -20px;
+    border-width: 5px;
+    border-style:solid;
+    border-color:#000 #000 rgba(255,255,255,.5) rgba(255,255,255,.5);
+    opacity:.9;
+    border-radius:20px;
+    -webkit-animation:rotate 1s linear infinite;
+    -ms-animation:rotate 1s linear infinite;
   }
-  svg path,
-  svg rect{
-    fill: #FF6700;
+  @-webkit-keyframes rotate{
+    0%{-webkit-transform:rotate(0deg)}
+    100%{-webkit-transform:rotate(360deg)}
   }
-
+  @-ms-keyframes rotate{
+    0%{-ms-transform:rotate(0deg)}
+    100%{-ms-transform:rotate(360deg)}
+  }
 }
